feat: add cp registration team, n some change on hackathon registration team
