# entity/team.go
@@ -4,13 +4,15 @@ import "time"
 
 type Team struct {
 	ID_Team        uint64 `gorm:"primary_key:auto_increment"`
-	Name           string `gorm:"varchar(255); not null"`
+	TeamName       string `gorm:"varchar(255); not null"`
 	Supervisor     string `gorm:"varchar(255); not null"`
 	SupervisorNIDN string `gorm:"varchar(255); not null"`
 	JoinCode       string `gorm:"varchar(255); not null"`
 
+	Event string `gorm:"varchar(255); not null"`
+
 	ID_LeadTeam uint64 `gorm:"not null"`
 
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	CreatedAt time.Time `gorm:"autoCreateTime"`
+	UpdatedAt time.Time `gorm:"autoUpdateTime"`
 }
